fellow creatures not fellow-creatures

--- a/journal-writings/modernized/10-chapter-8.adoc
+++ b/journal-writings/modernized/10-chapter-8.adoc
@@ -209,7 +209,7 @@ and the hearts of Friends opened to receive us.
 In the fourth month following,
 I accompanied some Friends in a visit to the families of Friends in Mount Holly;
 in which my mind was often drawn into an inward awfulness,
-wherein strong desires were raised for the everlasting welfare of my fellow-creatures;
+wherein strong desires were raised for the everlasting welfare of my fellow creatures;
 and through the kindness of our heavenly Father, our hearts were at times enlarged,
 and Friends invited in the flowings of Divine love,
 to attend to that which would settle them on the sure foundation.
