--- a/journal-writings/modernized/12-chapter-10.adoc
+++ b/journal-writings/modernized/12-chapter-10.adoc
@@ -117,7 +117,7 @@ and his heart smote him that he could not drink it, but poured it out to the Lor
 on this continent,
 and the report of their treatment in the West Indies has deeply affected me;
 and a care to live in the spirit of peace,
-and minister just cause of offense to none of my fellow-creatures, has,
+and minister just cause of offense to none of my fellow creatures, has,
 from time to time, livingly revived on my mind; and under this exercise,
 I have for some years past, declined to gratify my palate with those sugars.
 
