--- a/journal-writings/modernized/15-keeping-negroes.adoc
+++ b/journal-writings/modernized/15-keeping-negroes.adoc
@@ -329,7 +329,7 @@ It appears by experience, that where children are educated in fulness, ease,
 and idleness, evil habits are more prevalent,
 than is common among such who are prudently employed in the necessary affairs of life.
 If children are not only educated in the way of so great temptation,
-but have also the opportunity of lording it over their fellow-creatures,
+but have also the opportunity of lording it over their fellow creatures,
 and being masters of men in their childhood,
 how can we hope otherwise than that their tender minds
 will be possessed with thoughts too high for them;
@@ -435,7 +435,7 @@ become heirs with him in the kingdom of his Father,
 and are redeemed from the alluring counterfeit joys of this world,
 and the joy of Christ remain in us, to suppose that one in this happy condition, can,
 for the sake of earthly riches,
-not only deprive his fellow-creatures of the sweetness of freedom, which rightly used,
+not only deprive his fellow creatures of the sweetness of freedom, which rightly used,
 is one of the greatest temporal blessings,
 but therewith neglect using proper means for their acquaintance with the Holy Scriptures,
 and the advantage of true religion, seems at least a contradiction to reason.
