--- a/journal-writings/modernized/17-harmony.adoc
+++ b/journal-writings/modernized/17-harmony.adoc
@@ -22,14 +22,14 @@ justice and equity evidently accompany them;
 that we may give no just cause of offense to any, however distant,
 or unable to plead their own cause; and may continually keep in view,
 the spreading of the true and saving knowledge of God and of his son Jesus Christ,
-among our fellow-creatures, which through his infinite love,
+among our fellow creatures, which through his infinite love,
 some feel to be more precious than any other treasure.
 
 [.old-style]
 === Chapter I. / On serving the Lord in our outward employments.
 
 Under the humbling dispensations of the Father of mercies,
-I have felt an inward labor for the good of my fellow-creatures,
+I have felt an inward labor for the good of my fellow creatures,
 and a concern that the holy Spirit,
 which alone can restore mankind to a state of true harmony,
 may with singleness of heart be waited for and followed.
