--- a/journal-writings/modernized/18-remarks.adoc
+++ b/journal-writings/modernized/18-remarks.adoc
@@ -45,7 +45,7 @@ an increase of care becomes necessary.
 
 When our will is subject to the will of God, and in relation to the things of this world,
 we have nothing in view,
-but a comfortable living equally with the rest of our fellow-creatures,
+but a comfortable living equally with the rest of our fellow creatures,
 then outward treasures are no further desirable than as
 we feel a gift in our minds equal to the trust,
 and strength to act as dutiful children in His service, who both formed all mankind,
@@ -232,7 +232,7 @@ may be put in a way to escape these hardships;
 but how few have continued in that pure love which opens our
 understandings to proceed rightly under these difficulties!
 How few have faithfully followed that holy Leader who prepares his people to labor
-for the restoration of true harmony amongst our fellow-creatures!
+for the restoration of true harmony amongst our fellow creatures!
 "`In the pure Gospel spirit we walk by faith and not by sight.`"
 In the obedience of faith we die to the narrowness of self-love,
 and our life being hid with Christ in God,
