--- a/journal-writings/modernized/19-epistle.adoc
+++ b/journal-writings/modernized/19-epistle.adoc
@@ -484,7 +484,7 @@ and our minds are wholly attentive to the counsel of Christ inwardly communicate
 This has appeared to me a habitation of safety for the Lord`'s people,
 in times of outward commotion and trouble,
 and desires from the fountain of pure love are opened in me,
-to invite my brethren and fellow-creatures to feel for,
+to invite my brethren and fellow creatures to feel for,
 and seek after that which gathers the mind into it.
 
 [.signed-section-signature]
