--- a/journal-writings/original/06-chapter-4.adoc
+++ b/journal-writings/original/06-chapter-4.adoc
@@ -169,7 +169,7 @@ I further said, the present circumstances of these provinces to me appear diffic
 the slaves look like a burthensome stone to such who burthen themselves with them,
 and that if the white people retain a resolution to prefer
 their outward prospects of gain to all other considerations,
-and do not act conscientiously toward them as fellow-creatures,
+and do not act conscientiously toward them as fellow creatures,
 I believe that burthen will grow heavier and heavier,
 until times change in a way disagreeable to us.
 At this the person appeared very serious, and owned,
