--- a/journal-writings/original/09-chapter-7.adoc
+++ b/journal-writings/original/09-chapter-7.adoc
@@ -62,7 +62,7 @@ for whose sake my heart is at times moved with compassion,
 that I feel my mind resigned to leave you for a season,
 to exercise that gift which the Lord hath bestowed on me; which, though small,
 compared with some, yet in this I rejoice,
-that I feel love unfeigned toward my fellow-creatures.
+that I feel love unfeigned toward my fellow creatures.
 I recommend you to the Almighty, who, I trust, cares for you;
 and under a sense of his heavenly love, remain
 
