--- a/journal-writings/original/10-chapter-8.adoc
+++ b/journal-writings/original/10-chapter-8.adoc
@@ -128,7 +128,7 @@ Being thus fully convinced,
 and feeling an increasing desire to live in the spirit of peace;
 being often sorrowfully affected in thinking on the
 unquiet spirit in which wars are generally carried on,
-and with the miseries of many of my fellow-creatures engaged therein;
+and with the miseries of many of my fellow creatures engaged therein;
 some suddenly destroyed; some wounded, and after much pain remain cripples;
 some deprived of all their outward substance and reduced to want;
 and some carried into captivity--thinking often on these things,
@@ -206,7 +206,7 @@ and the hearts of Friends opened to receive us.
 In the fourth month following,
 I accompanied some Friends in a visit to the families of Friends in Mount Holly;
 in which my mind was often drawn into an inward awfulness,
-wherein strong desires were raised for the everlasting welfare of my fellow-creatures;
+wherein strong desires were raised for the everlasting welfare of my fellow creatures;
 and through the kindness of our heavenly Father, our hearts were at times enlarged,
 and Friends invited in the flowings of Divine love,
 to attend to that which would settle them on the sure foundation.
@@ -834,5 +834,5 @@ and the more so, for that rattlesnakes abound there, of which we killed four.
 People who have never been in such places, have but an imperfect idea of them;
 but I was not only taught patience, but also made thankful to God,
 who thus led me about and instructed me,
-that I might have a quick and lively feeling of the afflictions of my fellow-creatures,
+that I might have a quick and lively feeling of the afflictions of my fellow creatures,
 whose situation in life is difficult.
