--- a/journal-writings/original/11-chapter-9.adoc
+++ b/journal-writings/original/11-chapter-9.adoc
@@ -144,7 +144,7 @@ from which they would rather be excused, were the same required of them?
 "`Do these proceedings beget hard thoughts?
 Do hard thoughts, when ripe, become malice?
 Does malice, when ripe,
-become revengeful and in the end inflict terrible pains on their fellow-creatures,
+become revengeful and in the end inflict terrible pains on their fellow creatures,
 and spread desolations in the world?
 
 "`Do mankind, walking in uprightness, delight in each other`'s happiness?
