--- a/journal-writings/original/12-chapter-10.adoc
+++ b/journal-writings/original/12-chapter-10.adoc
@@ -17,7 +17,7 @@ before whom are all my ways, who alone hath the power of life and death;
 and to feel thankfulness raised in me, for this his fatherly chastisement,
 believing if I was truly humbled under it, all would work for good.
 While I was under this bodily weakness,
-my mind being at times exercised for my fellow-creatures in the West Indies,
+my mind being at times exercised for my fellow creatures in the West Indies,
 I grew jealous over myself,
 lest the disagreeableness of the prospect should
 hinder me from obediently attending thereto:
@@ -85,7 +85,7 @@ and often had a feeling of the condition of one formerly, who bewailed himself,
 for that the Lord hid his face from him.
 During these exercises,
 my heart hath been often contrite and I have had a tender
-feeling of the temptations of my fellow-creatures,
+feeling of the temptations of my fellow creatures,
 labouring under those expensive customs distinguishable
 from the simplicity that there is in Christ, 2 Cor. 2:3.
 , and sometimes in the renewings of Gospel love,
@@ -121,7 +121,7 @@ The oppression of the slaves which I have seen in several journies southward,
 on this continent,
 and the report of their treatment in the West Indies hath deeply affected me;
 and a care to live in the spirit of peace,
-and minister just cause of offence to none of my fellow-creatures, hath,
+and minister just cause of offence to none of my fellow creatures, hath,
 from time to time, livingly revived on my mind; and under this exercise,
 I have for some years past, declined to gratify my palate with those sugars.
 
@@ -222,7 +222,7 @@ After I had lain nearly ten hours in this condition, I closed my eyes,
 thinking whether I might now be delivered out of the body;
 but in these awful moments my mind was livingly opened to behold the church,
 and strong engagements were begotten in me,
-for the everlasting well-being of my fellow-creatures;
+for the everlasting well-being of my fellow creatures;
 and I felt in the spring of pure love, that I might remain some time longer in the body,
 in filling up according to my measure, that which remains of the afflictions of Christ,
 and in labouring for the good of the church.
