--- a/journal-writings/original/13-chapter-11.adoc
+++ b/journal-writings/original/13-chapter-11.adoc
@@ -162,7 +162,7 @@ who was meek and low of heart! and in faithfully following him,
 he will teach us to be content with food and raiment,
 without respect to the customs or honours of this world.
 
-Men thus redeemed, will feel a tender concern for their fellow-creatures,
+Men thus redeemed, will feel a tender concern for their fellow creatures,
 and a desire that those in the lowest stations may be assisted and encouraged;
 and where owners of ships attain to the perfect law of liberty,
 and are doers of the word, these will be blessed in their deeds.
@@ -323,7 +323,7 @@ was renewedly wrought in me,
 whose fatherly care over his children felt precious to my soul.
 Desires were now renewed in me,
 to embrace every opportunity of being inwardly acquainted with
-the hardships and difficulties of my fellow-creatures,
+the hardships and difficulties of my fellow creatures,
 and to labour in his love for the spreading of pure universal righteousness on the earth.
 The opportunities were frequent of hearing conversation amongst the sailors,
 in respect to the voyages to Africa,
@@ -363,7 +363,7 @@ and I have looked at the present dispensation as
 a kindness from the great Father of mankind,
 who, in this my floating pilgrimage,
 is in some degree bringing me to feel what many thousands of
-my fellow-creatures often suffer in a greater degree.
+my fellow creatures often suffer in a greater degree.
 
 My appetite failing, the trial has been the heavier;
 and I have felt tender breathings in my soul after God, the fountain of comfort,
