--- a/journal-writings/original/16-various-subjects.adoc
+++ b/journal-writings/original/16-various-subjects.adoc
@@ -482,7 +482,7 @@ so imaginary wants are different "`from those
 things which he knoweth that we have need of.`"
 
 As my meditations have been on these things,
-compassion hath filled my heart toward my fellow-creatures, involved in customs,
+compassion hath filled my heart toward my fellow creatures, involved in customs,
 which have grown up in "`the wisdom of this world, which is foolishness with God.`"
 O that the youth may be so thoroughly experienced in an humble walking before the Lord,
 that they may be his children, and know him to be their refuge,
