--- a/journal-writings/original/17-harmony.adoc
+++ b/journal-writings/original/17-harmony.adoc
@@ -25,7 +25,7 @@ some feel to be more precious than any other treasure.
 === Chapter I. / On serving the Lord in our outward employments.
 
 Under the humbling dispensations of the Father of mercies,
-I have felt an inward labour for the good of my fellow-creatures,
+I have felt an inward labour for the good of my fellow creatures,
 and a concern that the holy Spirit,
 which alone can restore mankind to a state of true harmony,
 may with singleness of heart be waited for and followed.
@@ -131,7 +131,7 @@ pieces,`" and forced to endure the painful operation of having
 his face gradually worn away in the manner of grinding.
 
 I may here add, that at times,
-when I have felt true love open my heart towards my fellow-creatures,
+when I have felt true love open my heart towards my fellow creatures,
 and been engaged in weighty conversation in the cause of righteousness,
 the instructions I have received under these exercises,
 in regard to the true use of the outward gifts of God,
@@ -685,7 +685,7 @@ to remind us of our duty in a right use of those benefits,
 and to give striking admonitions, that we do not misapply those gifts,
 in which an Almighty power is exerted, in bestowing them upon us.
 
-When I have considered that many of our fellow-creatures suffer much in some places,
+When I have considered that many of our fellow creatures suffer much in some places,
 for want of the necessaries of life,
 whilst those who rule over them are too much given to luxury and divers vanities;
 and behold the apparent deviation from pure wisdom amongst us,
