--- a/journal-writings/original/18-remarks.adoc
+++ b/journal-writings/original/18-remarks.adoc
@@ -35,7 +35,7 @@ While hired labourers, by moderate industry, through the Divine blessing,
 may live comfortably, rear up families, and give them suitable education,
 it appears reasonable for them to be contented with their wages.
 
-If they who have plenty, love their fellow-creatures in that love which is Divine,
+If they who have plenty, love their fellow creatures in that love which is Divine,
 and in all their proceedings have an equal regard to the good of mankind universally,
 their place in society is a place of care, an office requiring attention,
 and the more we possess, the greater is our trust, and with an increase of treasure,
@@ -246,7 +246,7 @@ but how few have continued in that pure love which openeth our
 understandings to proceed rightly under these difficulties!
 
 How few have faithfully followed that holy Leader who prepares his people to
-labour for the restoration of true harmony amongst our fellow-creatures!
+labour for the restoration of true harmony amongst our fellow creatures!
 
 "`In the pure Gospel spirit we walk by faith and not by sight.`"
 
@@ -1075,7 +1075,7 @@ What pious man could be a witness to these things,
 and see a trade carried on in this manner, without being deeply affected with sorrow?
 
 Through abiding in the love of Christ we feel a
-tenderness in our hearts toward our fellow-creatures,
+tenderness in our hearts toward our fellow creatures,
 entangled in oppressive customs; and a concern so to walk,
 that our conduct may not be a means of strengthening them in error.
 
@@ -1243,7 +1243,7 @@ these ships to learn the practice of a mariner,
 could forbear mourning over him?
 
 Where youth are exampled in means of getting money so full of violence,
-and used to exercise such cruelties on their fellow-creatures,
+and used to exercise such cruelties on their fellow creatures,
 the disadvantage to them in their education is very great.
 
 But I feel it in my mind to write concerning the seafaring life in general.
@@ -1347,7 +1347,7 @@ have often revived in my mind,
 as cases of which some who live in fulness need to be put in remembrance.
 
 There are few if any,
-who could behold their fellow-creatures lie long in distress and forbear to help them,
+who could behold their fellow creatures lie long in distress and forbear to help them,
 when they could do it without any inconvenience;
 but customs requiring much labour to support them, do often lie heavily on the poor,
 while they who live in these customs are so
