--- a/journal-writings/original/19-epistle.adoc
+++ b/journal-writings/original/19-epistle.adoc
@@ -425,7 +425,7 @@ May each of us query with ourselves, have the treasures I possess,
 been gathered in that wisdom which is from above,
 so far as has appeared to me?
 
-Have none of my fellow-creatures an equitable right
+Have none of my fellow creatures an equitable right
 to any part of what is called mine?
 
 Have the gifts and possessions received by me from others,
@@ -435,7 +435,7 @@ The principle of peace in which our trust is only on the Lord,
 and our minds weaned from a dependance on the strength of armies,
 has appeared to me very precious; and I often feel strong desires,
 that we who profess this principle, may so walk,
-as to give no just cause for any of our fellow-creatures to be offended at us;
+as to give no just cause for any of our fellow creatures to be offended at us;
 and that our lives may evidently manifest,
 that we are redeemed from that spirit in which wars are.
 Our blessed Saviour in pointing out the danger of so leaning on man,
@@ -480,7 +480,7 @@ which was shed from the foundation of the world,
 should be required of that generation, from the blood of Abel,
 unto the blood of Zacharias, which perished between the altar and the temple.`"
 
-Tender compassion fills my heart toward my fellow-creatures estranged
+Tender compassion fills my heart toward my fellow creatures estranged
 from the harmonious government of the Prince of peace,
 and a labour attends me, that they may be gathered to this peaceable habitation.
 
@@ -493,7 +493,7 @@ and our minds are wholly attentive to the counsel of Christ inwardly communicate
 This has appeared to me a habitation of safety for the Lord`'s people,
 in times of outward commotion and trouble,
 and desires from the fountain of pure love are opened in me,
-to invite my brethren and fellow-creatures to feel for,
+to invite my brethren and fellow creatures to feel for,
 and seek after that which gathers the mind into it.
 
 John Woolman.
