--- a/journal-writings/original/01-testimony-yorkshire.adoc
+++ b/journal-writings/original/01-testimony-yorkshire.adoc
@@ -44,7 +44,7 @@ In the early part of his illness he requested a Friend to write,
 and then broke forth thus:
 "`O Lord my God! the amazing horrors of darkness were gathered
 around me and covered me all over and I saw no way to go forth.
-I felt the misery of my fellow-creatures separated from the Divine harmony
+I felt the misery of my fellow creatures separated from the Divine harmony
 and it was heavier than I could bear--I was crushed down under it.
 I lifted tip my hand, and stretched out my arm, but there was none to help me.
 I looked round about and was amazed.
