update spelling: burthen > burden

--- a/journal-writings/original/02-testimony-burlington.adoc
+++ b/journal-writings/original/02-testimony-burlington.adoc
@@ -30,7 +30,7 @@ whose cause, as he sometimes mentioned, lay almost continually upon him,
 and to obtain liberty to those captives, he laboured both in public and private,
 and was favoured to see his endeavours crowned with considerable success.
 He was particularly desirous that Friends should not be
-instrumental to lay burthens on this oppressed people,
+instrumental to lay burdens on this oppressed people,
 but remember the days of suffering from which they had been providentially delivered,
 that if times of trouble should return,
 no injustice dealt to those in slavery might rise in judgment against us, but,
