--- a/journal-writings/original/04-chapter-2.adoc
+++ b/journal-writings/original/04-chapter-2.adoc
@@ -161,10 +161,10 @@ when I eat, drank, and lodged free of cost,
 with people who lived in ease on the hard labour of their slaves, I felt uneasy;
 and as my mind was inward to the Lord, I found, from place to place,
 this uneasiness return upon me, at times, through the whole visit.
-Where the masters bore a good share of the burthen, and lived frugally,
+Where the masters bore a good share of the burden, and lived frugally,
 so that their servants were well provided for, and their labour moderate,
 I felt more easy; but where they lived in a costly way,
-and laid heavy burthens on their slaves, my exercise was often great,
+and laid heavy burdens on their slaves, my exercise was often great,
 and I frequently had conversation with them, in private, concerning it.
 Secondly;
 the trade of importing slaves from their native
@@ -344,7 +344,7 @@ at no time to seek for words, but to live in the Spirit of Truth,
 and utter that to the people which Truth opened in us.
 My beloved companion and I belonged to one meeting,
 came forth in the ministry near the same time, and were inwardly united in the work:
-he was about thirteen years older than I, bore the heaviest burthen,
+he was about thirteen years older than I, bore the heaviest burden,
 and was an instrument of the greatest use.
 
 Finding a concern to visit Friends in the lower counties on Delaware,
