--- a/journal-writings/original/05-chapter-3.adoc
+++ b/journal-writings/original/05-chapter-3.adoc
@@ -310,7 +310,7 @@ so that I expressed in some measure what lay upon me;
 and at a time when Friends were met for transacting the affairs of the church,
 having sat awhile silent, I felt a weight on my mind, and stood up;
 and through the gracious regard of our heavenly Father,
-strength was given fully to clear myself of a burthen,
+strength was given fully to clear myself of a burden,
 which for some days had been increasing upon me.
 
 Through the humbling dispensations of Divine Providence,
@@ -351,7 +351,7 @@ It had been my general practice to buy and sell things really useful;
 things that served chiefly to please the vain mind in people, I was not easy to trade in;
 seldom did it; and whenever I did, I found it to weaken me as a Christian.
 
-The increase of business became my burthen;
+The increase of business became my burden;
 for though my natural inclination was toward merchandizing,
 yet I believed Truth required me to live more free from outward cumber;
 and there was now a strife in my mind between the two.
