--- a/journal-writings/original/06-chapter-4.adoc
+++ b/journal-writings/original/06-chapter-4.adoc
@@ -166,11 +166,11 @@ and while our buying captives taken in war, animates those parties to push on th
 and increase desolation amongst them; to say they live unhappily in Africa,
 is far from being an argument in our favour.
 I further said, the present circumstances of these provinces to me appear difficult;
-the slaves look like a burthensome stone to such who burthen themselves with them,
+the slaves look like a burdensome stone to such who burden themselves with them,
 and that if the white people retain a resolution to prefer
 their outward prospects of gain to all other considerations,
 and do not act conscientiously toward them as fellow creatures,
-I believe that burthen will grow heavier and heavier,
+I believe that burden will grow heavier and heavier,
 until times change in a way disagreeable to us.
 At this the person appeared very serious, and owned,
 that in considering their condition and the manner of their treatment in these provinces,
