--- a/journal-writings/original/07-chapter-5.adoc
+++ b/journal-writings/original/07-chapter-5.adoc
@@ -259,7 +259,7 @@ and at some meetings in the county of Philadelphia,
 I went first to said Quarterly Meeting, which was large;
 and several weighty matters came under consideration and debate;
 and the Lord was pleased to qualify some of his servants with strength and firmness,
-to bear the burthen of the day.
+to bear the burden of the day.
 Though I said but little, my mind was deeply exercised; and under a sense of God`'s love,
 in anointing and fitting some young men for his work, I was comforted,
 and my heart was tendered before him.
