--- a/journal-writings/original/09-chapter-7.adoc
+++ b/journal-writings/original/09-chapter-7.adoc
@@ -260,7 +260,7 @@ My exercise was heavy, and I was deeply bowed in spirit before the Lord,
 who was pleased to favour with the seasoning virtue of Truth,
 which wrought a tenderness amongst us;
 and the subject was mutually handled in a calm and peaceable spirit.
-At length feeling my mind released from the burthen which I had been under,
+At length feeling my mind released from the burden which I had been under,
 I took my leave of them in a good degree of satisfaction;
 and by the tenderness they manifested in regard to the practice,
 and the concern several of them expressed in relation to the
@@ -285,7 +285,7 @@ As the sense thereof hath abased me, and my cries have been to the Lord,
 I have been humbled and made content to appear weak, or as a fool for his sake;
 and thus a door hath opened to enter upon it.
 To attempt to do the Lord`'s work in our own way,
-and to speak of that which is the burthen of the word, in a way easy to the natural part,
+and to speak of that which is the burden of the word, in a way easy to the natural part,
 doth not reach the bottom of the disorder.
 To see the failings of our friends, and think hard of them,
 without opening that which we ought to open, and still carry a face of friendship,
