--- a/journal-writings/original/10-chapter-8.adoc
+++ b/journal-writings/original/10-chapter-8.adoc
@@ -791,7 +791,7 @@ In the second time fording, where the river cuts through the mountain,
 the waters being rapid and pretty deep,
 and my companion`'s mare being a tall tractable animal,
 he sundry times drove her through the river,
-and they loaded her with the burthens of some small horses,
+and they loaded her with the burdens of some small horses,
 which they thought not sufficient to come through with their loads.
 
 The troubles westward, and the difficulty for Indians to pass through our frontier,
