--- a/journal-writings/original/11-chapter-9.adoc
+++ b/journal-writings/original/11-chapter-9.adoc
@@ -111,7 +111,7 @@ at Quarterly and Yearly Meetings,
 and at some houses where travelling Friends and their horses are often entertained,
 that the yearly expense of individuals therein is very considerable.
 Friends in some places crowding much on persons in these circumstances for entertainment,
-hath rested as a burthen on my mind for some years past,
+hath rested as a burden on my mind for some years past,
 and I now express it in the fear of the Lord,
 greatly desiring that Friends now present may duly consider it.`"
 In the fall of this year having hired a man to work,
@@ -498,7 +498,7 @@ As my mind hath been inward to the Lord,
 the purity of Christ`'s government hath been opened on my understanding;
 and under this exercise, that of Friends being active in civil society,
 in putting laws in force which are not agreeable to the purity of righteousness,
-hath for several years been an increasing burthen upon me.
+hath for several years been an increasing burden upon me.
 I have felt in the openings of universal love,
 that where a people convinced of the truth of the inward teachings of Christ,
 are active in putting laws in execution, which are not consistent with pure wisdom,
