--- a/journal-writings/original/15-keeping-negroes.adoc
+++ b/journal-writings/original/15-keeping-negroes.adoc
@@ -338,7 +338,7 @@ gradually separating them from or keeping from acquaintance with that
 humility and meekness in which alone lasting happiness can be enjoyed.
 
 Man is born to labour, and experience abundantly showeth, that it is for our good:
-but where the powerful lay the burthen on the inferior,
+but where the powerful lay the burden on the inferior,
 without affording a Christian education, and suitable opportunity of improving the mind,
 and a treatment which we, in their case, should approve,
 in order that themselves may live at ease, and fare sumptuously,
@@ -1099,7 +1099,7 @@ Now while each is at liberty, the latter may be as happy,
 and live as comfortably as the former;
 but where men of the first sort have the latter under absolute command,
 and not considering the odds in strength and firmness,
-do sometimes in their eager pursuit, lay on them burthens grievous to be borne;
+do sometimes in their eager pursuit, lay on them burdens grievous to be borne;
 and by degrees grow more rigorous; these aspiring to greatness, increase oppression,
 and the true order of a kind Providence is subverted.
 
