--- a/journal-writings/original/16-various-subjects.adoc
+++ b/journal-writings/original/16-various-subjects.adoc
@@ -185,7 +185,7 @@ had he not seen that labour was proper for us in this life.
 The original design and true medium of labour,
 is a subject that to me appears worthy of our serious consideration.
 
-Idle men are often a burthen to themselves, neglect the duty they owe to their families,
+Idle men are often a burden to themselves, neglect the duty they owe to their families,
 and become burdensome to others also.
 
 As outward labour directed by the wisdom from above,
