--- a/journal-writings/original/19-epistle.adoc
+++ b/journal-writings/original/19-epistle.adoc
@@ -244,7 +244,7 @@ so the true suffering seed is more and more oppressed.
 My mind is often affected with a sense of the condition
 of sincere-hearted people in some kingdoms,
 where liberty of conscience is not allowed,
-many of whom being burthened in their minds with the prevailing superstition,
+many of whom being burdened in their minds with the prevailing superstition,
 joined with oppressions, are often under sorrow;
 and where such have attended to that pure light which
 has in some degree opened their understandings,
