for ever > forever

--- a/journal-writings/original/15-keeping-negroes.adoc
+++ b/journal-writings/original/15-keeping-negroes.adoc
@@ -825,7 +825,7 @@ that the Jews by their law made slaves of the heathen.
 of them shall ye buy, and of their children which are with you,
 which they begat in your land; and they shall be your possession;
 and you shall take them as an inheritance for your children after you,
-to inherit them as a possession, they shall be your bondmen for ever.`"
+to inherit them as a possession, they shall be your bondmen forever.`"
 It is difficult for us to have a certain knowledge of the mind of Moses,
 in regard to keeping slaves,
 in any other way than by looking upon him as a true servant of God,
@@ -864,23 +864,23 @@ willing to enter into bonds to serve the Jews as long as they lived;
 and in such case the Jews, by their law, had a right to their service during life.
 
 When the awl was bored through the ear of the Hebrew servant, the text saith,
-"`He shall serve for ever;`" yet we do not suppose that by the word "`for
-ever,`" it was intended that none of his posterity should afterwards be free.
+"`He shall serve forever;`" yet we do not suppose that by the word "`forever,`"
+it was intended that none of his posterity should afterwards be free.
 When it is said in regard to the strangers which they bought,
 "`They shall be your possession,`" it may be well
 understood to mean only the persons so purchased;
 all that precedes relates to buying them,
 and what follows to the continuance of their service;
 "`You shall take them as an inheritance to your children after you;
-they shall be your bondmen for ever.`"
+they shall be your bondmen forever.`"
 It may be well understood to stand limited to those they purchased.
 
 Moses directing Aaron and his sons to wash their hands and feet,
 when they went into the tabernacle of the congregation, saith,
-"`It shall be a statute for ever to them,
+"`It shall be a statute forever to them,
 even to him and his seed throughout all generations.`"
 And to express the continuance of the law, it was his common language,
-"`It shall be a statute for ever throughout your generations.`"
+"`It shall be a statute forever throughout your generations.`"
 So that had he intended the posterity of the strangers
 so purchased to continue in slavery to the Jews,
 it looks likely that he would have used some terms clearly to express it.
