--- a/journal-writings/modernized/06-chapter-4.adoc
+++ b/journal-writings/modernized/06-chapter-4.adoc
@@ -387,6 +387,7 @@ and it was a strengthening opportunity to the honest-hearted.
 About this time I wrote an epistle to Friends in the back settlements of North Carolina,
 as follows: To Friends at their Monthly Meeting at New Garden and Cane creek,
 in North Carolina.
+//After I did this in the original, I checked it here and that last sentence right above I put as a letter head. Should I instead make it like this one, or do you want me to make this one a letterhead too?
 
 [.embedded-content-document.letter]
 --
