--- a/journal-writings/original/04-chapter-2.adoc
+++ b/journal-writings/original/04-chapter-2.adoc
@@ -1,13 +1,13 @@
 == Chapter II.
 
-His first journey, on a religious visit, into East Jersey,
-in company with Abraham Farrington--Thoughts on merchandizing,
-and learning a trade--Second journey, with Isaac Andrews, into Pennsylvania, Maryland,
-Virginia, and North Carolina--Third journey, with Peter Andrews,
-through part of West and East Jersey--Some account of his sister Elizabeth,
-and her death--Fourth journey, with Peter Andrews, through New York and Long Island,
-to New England--Fifth journey, with John Sykes, to the Eastern Shore of Maryland,
-and the lower counties of Delaware.
+[.chapter-synopsis]
+* His first journey, on a religious visit, into East Jersey, in company with Abraham Farrington
+* Thoughts on being a merchant, and learning a trade
+* Second journey, with Isaac Andrews, into Pennsylvania, Maryland, Virginia, and North Carolina
+* Third journey, with Peter Andrews, through part of West and East Jersey
+* Some account of his sister Elizabeth, and her death
+* Fourth journey, with Peter Andrews, through New York and Long Island, to New England
+* Fifth journey, with John Sykes, to the Eastern Shore of Maryland, and the lower counties of Delaware
 
 My esteemed friend Abraham Farrington,
 being about to make a visit to Friends on the eastern side of this province,
@@ -218,8 +218,13 @@ giving herself much to reading and meditation.
 
 The following letter may show, in some degree, her disposition:
 
+[.embedded-content-document.letter]
+--
+
+[.signed-section-context-open]
 Haddonfield, Eleventh Month 1st, 1743.
 
+[.salutation]
 Beloved brother, John Woolman,
 
 In that love which desires the welfare of all men, I write unto thee.
@@ -233,9 +238,13 @@ I am refreshed and comforted as with the glimpse of his presence,
 which is more to the immortal part, than all which this world can afford: so,
 with desires for thy preservation with my own,
 
+[.signed-section-closing]
 I remain Thy affectionate sister,
 
+[.signed-section-signature]
 Elizabeth Woolman, Jun.
+
+--
 
 The forepart of her illness she was in great sadness and dejection of mind,
 of which she told one of her intimate friends, and said,
@@ -258,17 +267,26 @@ and it will be well with my soul; and accordingly she died the next evening.
 The following ejaculations were found amongst her writings; written, I believe,
 at four times:
 
+[.embedded-content-document]
+--
+
+[.numbered]
 I+++.+++ Oh! that my head were as waters, and mine eyes as a fountain of tears,
 that I might weep day and night, until acquainted with my God.
 
+[.numbered]
 II. O Lord, that I may enjoy thy presence; or else my time is lost,
 and my life a snare to my soul.
 
+[.numbered]
 III.
 O Lord, that I may receive bread from thy table, and that thy grace may abound in me.
 
+[.numbered]
 IV. O Lord, that I may be acquainted with thy presence,
 that I may be seasoned with thy salt, that thy grace may abound in me.
+
+--
 
 Of late I found drawings in my mind to visit Friends in New England,
 and having an opportunity of joining in company with my beloved friend Peter Andrews,
