--- a/journal-writings/original/05-chapter-3.adoc
+++ b/journal-writings/original/05-chapter-3.adoc
@@ -1,10 +1,15 @@
 == Chapter III.
 
-His marriage--The death of his father--His journies into the upper part of New Jersey,
-and afterwards into Pennsylvania--Considerations on keeping slaves--Visits
-to the families of Friends at several times and places--An epistle from the
-General Meeting--Journey to Long Island--Considerations on trading,
-and on the use of spirituous liquors and costly apparel--Letter to a Friend.
+[.chapter-synopsis]
+* His marriage
+* The death of his father
+* His journeys into the upper part of New Jersey, and afterwards into Pennsylvania
+* Considerations on keeping slaves
+* Visits to the families of Friends at several times and places
+* An epistle from the General Meeting
+* Journey to Long Island
+* Considerations on trading, and on the use of spirituous liquors and costly apparel
+* Letter to a Friend.
 
 About this time believing it good for me to settle,
 and thinking seriously about a companion, my heart was turned to the Lord,
@@ -131,6 +136,10 @@ An Epistle from our General Spring meeting of ministers and elders,
 for Pennsylvania and New Jersey, held at Philadelphia, from the 20th of the third month,
 to the 1st of the fourth month, inclusive, 1755; To Friends on the continent of America.
 
+[.embedded-content-document.letter]
+--
+
+[.salutation]
 Dear Friends,
 
 In an humble sense of Divine goodness,
@@ -219,7 +228,10 @@ even to shake terribly the earth, who then may oppose him, and prosper!
 
 We remain, in the love of the Gospel, your friends and brethren.
 
+[.signed-section-signature]
 Signed by fourteen Friends.
+
+--
 
 Scrupling to do writings relative to keeping slaves,
 having been a means of sundry small trials to me,
@@ -430,7 +442,11 @@ In the winter, this year, I was engaged with Friends in visiting families;
 and through the goodness of the Lord,
 we had oftentimes experience of his heart-tendering presence amongst us.
 
-A copy of a letter written to a Friend.
+[.embedded-content-document.letter]
+--
+
+[.letter-heading]
+A copy of a letter written to a Friend
 
 In this thy late affliction I have found a deep fellow-feeling with thee;
 and had a secret hope throughout,
@@ -495,3 +511,5 @@ we find safety and true exaltation: the foolishness of God is wiser than man,
 and the weakness of God is stronger than man.
 Being unclothed of our own wisdom, and knowing the abasement of the creature,
 therein we find that power to arise, which gives health and vigor to us.
+
+--
