--- a/journal-writings/original/07-chapter-5.adoc
+++ b/journal-writings/original/07-chapter-5.adoc
@@ -1,14 +1,13 @@
 == Chapter V.
 
-Considerations on the payment of a tax laid for carrying on the war against
-the Indians--Some notes on Thomas a Kempis and John Huss--Meetings of the
-committee of the Yearly Meeting at Philadelphia--The present circumstances
-of Friends in Pennsylvania and New Jersey very different from those of our
-predecessors--The drafting of the militia in New Jersey to serve in the army;
-with some observations on the state of the members of our
-Society at that time--His visit to Friends in Pennsylvania,
-accompanied by Benjamin Jones--Proceedings at the Monthly,
-Quarterly and Yearly Meetings in Philadelphia, respecting those who keep slaves.
+[.chapter-synopsis]
+* Considerations on the payment of a tax laid for carrying on the war against the Indians
+* Some notes on Thomas a Kempis and John Huss
+* Meetings of the committee of the Yearly Meeting at Philadelphia
+* The present circumstances of Friends in Pennsylvania and New Jersey very different from those of our predecessors
+* The drafting of the militia in New Jersey to serve in the army; with some observations on the state of the members of our Society at that time
+* His visit to Friends in Pennsylvania, accompanied by Benjamin Jones
+* Proceedings at the Monthly, Quarterly and Yearly Meetings in Philadelphia, respecting those who keep slaves
 
 A few years past, money being made current in our province for carrying on wars,
 and to be called in again by taxes laid on the inhabitants,
